--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OSite</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <article class="Destaques">
+        <section class="DestaquesTitulo">
+            <h1>Destaques</h1>
+        </section>
+
+        <section class="DestaquesConteudo">
+            <div class="DestaquesImagem">
+                <div class="BackgroundImage"></div>
+            </div>
+
+            <div class="DestaquesTexto">
+                <h1>Montando layout com CSS</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis corrupti dolorem sed accusamus! Libero pariatur ipsam consequatur ex! Non recusandae asperiores voluptatibus necessitatibus eos natus facilis dolores iusto obcaecati expedita?
+                   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos nisi sequi eos, quis impedit, possimus exercitationem quia facilis repudiandae doloribus quo recusandae illo sapiente tempore. Cumque aut dignissimos optio sapiente.
+                </p>
+                <a href="#"><button>Leia Mais</button></a>
+            </div>
+        </section>
+    </article>
 </body>
 </html>
