--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OSite</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="Cabeçalho"></div>
+        <div class="Links">
+            <ul>
+                <a href="#">Menu</a>
+                <a href="#">Marketing</a>
+                <a href="#">Internet</a>
+                <a href="#">Ganhar Dinheiro</a>
+                <a href="#">Webmaster</a>
+                <a href="#">Scripts</a>
+                <a href="#">Software</a>
+                <a href="#">Comércio Eletrônico</a>
+                <a href="#">Dowloads</a>
+                <a href="#">Contato</a>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
