--- a/index.html
+++ b/index.html
@@ -4,30 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <title>OSite</title>
 </head>
 <body>
-    <header>
-        <nav>
-
-        </nav>
-    </header>
-
+    <header></header>
     <main>
-        <article>
-            <section>
-
-            </section>
-        </article>
-    </main>
-
-    <footer>
-        <div>
-      
+        <article class="Destaques"></article>
+        <div class="Caixas">
+        <article class="Caixa1"></article>
+        <article class="Caixa2"></article>
         </div>
-    </footer>
-
-    <script src="script.js" type="text/javascript"></script>
+    </main>
+    <aside>
+        <section class="CaixaBusca"></section>
+        <section class="MaisLidos"></section>
+        <section class="Galeria"></section> 
+    </aside>
+    <footer></footer>
 </body>
 </html>
