--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <section class="MaisLidos"></section>
         <section class="Galeria"></section> 
     </aside>
-    <footer></footer>
+    <footer>
+        <p>Webmaster pt</p>
+    </footer>
 </body>
 </html>
