--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
         <section class="MaisLidos"></section>
         <section class="Galeria"></section> 
     </aside>
-    <footer>
-        <p>Webmaster pt</p>
-    </footer>
+    <footer></footer>
 </body>
 </html>
