--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>OSite</title>
 </head>
 <body>
-    
+    <aside>
+        <div>
+        <img src="raposa.png" alt="raposa">
+        <img src="lobo.png" alt="lobo" class="lobo">
+        <img src="jaguar.png" alt="jaguar" class="jaguar">
+        <img src="tigre.png" alt="tigre" class="tigre">
+        </div>
+    </aside>
 </body>
 </html>
