--- a/index.html
+++ b/index.html
@@ -1,31 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <article class="Destaques">
-        <section class="DestaquesTitulo">
-            <h1>Destaques</h1>
-        </section>
-
-        <section class="DestaquesConteudo">
-            <div class="DestaquesImagem">
-                <div class="BackgroundImage"></div>
+<div class="DestaquesTitulo">
+                <h1>Destaques</h1>
+            </div>
+            
+            <div class="DestaquesFoto">
+                <div class="DestaquesImagem"></div>
             </div>
 
             <div class="DestaquesTexto">
-                <h1>Montando layout com CSS</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis corrupti dolorem sed accusamus! Libero pariatur ipsam consequatur ex! Non recusandae asperiores voluptatibus necessitatibus eos natus facilis dolores iusto obcaecati expedita?
-                   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos nisi sequi eos, quis impedit, possimus exercitationem quia facilis repudiandae doloribus quo recusandae illo sapiente tempore. Cumque aut dignissimos optio sapiente.
-                </p>
-                <a href="#"><button>Leia Mais</button></a>
+                <h1>Montando o layout com CSS</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut soluta itaque quo error enim fugiat. Cum quia quam laboriosam labore illum reiciendis dolorem at nam, culpa, voluptatum laudantium aperiam neque.</p>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores iure eum veniam, error esse perferendis laboriosam sed consequatur corrupti quos! Fuga, tempora expedita eius voluptate fugiat libero? Corporis, dolor? Minima.</p>
+                <button>Leia mais</button>
             </div>
-        </section>
-    </article>
-</body>
-</html>
