--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OSite</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+    <h2>MAIS ARTIGOS</h2>
+    <ul>
+        <li>Ola</li>
+        <li>Teste</li>
+        <li>Programação</li>
+        <li>Oi</li>
+    </section>
+    </ul>
 </body>
 </html>
