--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>OSite</title>
 </head>
 <body>
-    
+    <article>
+        <section>
+            <div class="div1">
+                <h1 class="webdesing">WEBDESIGN</h1>
+            </div>
+            <h2>Artigo em destaque</h2>
+            <p>ipsum dolor sit amet consectetur, adipisicing elit. Quo nemo rem architecto aut cumque tempora nisi alias enim corporis explicabo nesciunt doloremque error, magni, vero officia dolorem fugiat possimus nostrum.</p>
+            <div class="leiamais">
+                <span class="um">LEIA MAIS</span>
+            </div>
+                <div class="div2">
+                    <h1 class="maisartigos">MAIS ARTIGOS</h1>
+                </div>
+            <div class="ulli">
+                <ul>
+                    <li>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </li>
+                    <li>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    </li>
+                    <li>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    </li>
+                    <li>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </article>
 </body>
 </html>
