--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="#">Menu</a>
                 <a href="#">Marketing</a>
                 <a href="#">Internet</a>
-                <a href="#">Ganhar Dinheiro</a>
+                <a href="https://www.kwai.com/pt-BR">Ganhar Dinheiro</a>
                 <a href="#">Webmaster</a>
                 <a href="#">Scripts</a>
                 <a href="#">Software</a>
