--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title>Trabalho OSite</title>
+    <style type="text/css">
+        body{cursor:url(cursores/cursor.cur), default}
+    </style>
 </head>
 <body>
     <header>
 <div class="Cabeçalho"></div>
         <div class="Links">
             <li class="links1">
-                <a href="#">Menu</a>
-                <a href="#">Marketing</a>
-                <a href="#">Internet</a>
-                <a href="https://www.kwai.com/pt-BR">Ganhar Dinheiro</a>
-                <a href="#">Webmaster</a>
-                <a href="#">Scripts</a>
-                <a href="#">Software</a>
-                <a href="#">Comércio Eletrônico</a>
+                <a href="file:///C:/Users/Administrator/Desktop/OSite/index.html#" target="_blank">Menu</a>
+                <a href="https://prosettings.net/players/" target="_blank">Players</a>
+                <a href="https://prosettings.net/cs-go-pro-settings-gear-list/" target="_blank">PlayersSettings</a>
+                <a href="https://prosettings.net/counterstrike/" target="_blank">PlayersInfo</a>
+                <a href="https://imageproxy.ifunny.co/crop:x-20,resize:640x,quality:90x75/images/84dd7c7cfb35c03dbeffa44e602e540ea6186f60546b31aaaeb9a00ec4ba5090_1.jpg" target="_blank">HelpMe</a>
+                <a href="#">AboutCheats</a>
                 <a href="#">Dowloads</a>
                 <a href="#">Contato</a>
             </li>
@@ -41,15 +42,32 @@
                 <button class="botaolm1">Leia mais</button>
             </div>
         </article>
-        <div class="Caixas">
-        <article class="Caixa1">
-                <section>
-                 <h1 class="h1UM">PROGRAMAÇÃO</h1>
-                 <h3>Artigo em destaque</h3>
+        <article class="Caixas">
+        <div class="Caixa1">
+            <section>
+                <div class="h1UM">
+                    <h1 class="h1UM2">PROGRAMAÇÃO</h1>
+                </div>
+                 <h3 class="h3dois">Artigo em destaque</h3>
                  <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, accusamus illum cumque rem incidunt recusandae vitae est consequatur qui alias eum deleniti beatae vel delectus totam! Neque maiores amet eaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima vero magni?</p>
                  <button class="botaolm2">Leia Mais</button>
                 </section>
-
+                <div class="div3"></div>
+                <h1 class="maisartigos2">MAIS ARTIGOS</h1>
+                <div class="ulli2">
+                    <li>
+                        Lorem ipsum dolor sit amet consectetur.
+                    </li>
+                    <li>
+                        Lorem, ipsum dolor sit amet consectetur.
+                    </li>
+                    <li>
+                        Lorem, ipsum dolor sit amet consectetur.
+                    </li>
+                    <li>
+                        Lorem, ipsum dolor sit amet consectetur.
+                    </li>
+            </div>
         </article>
         <article class="Caixa2">
             <section>
@@ -66,16 +84,16 @@
                     </div>
                 <div class="ulli">
                         <li>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Lorem ipsum dolor sit amet consectetur.
                         </li>
                         <li>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Lorem, ipsum dolor sit amet consectetur.
                         </li>
                         <li>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Lorem, ipsum dolor sit amet consectetur.
                         </li>
                         <li>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Lorem, ipsum dolor sit amet consectetur.
                         </li>
                 </div>
             </section>
@@ -85,12 +103,13 @@
     <aside>
         <section class="CaixaBusca">
             <div class="Busca">
-                <input type="text" maxlength="25"  placeholder="Digite o termo e pressione enter">
+                <input type="text" maxlength="38"  placeholder="Digite o termo e pressione enter">
             </div>
         </section>
         <section class="MaisLidos">
-            <aside>
-                <h1>MAIS LIDOS</h1>
+            <div class="h1ml">
+                <h1 class="h1title">MAIS LIDOS</h1>
+            </div>
                 <ul class="ulmaislidos">
                     <li>lorem ipsum</li>
                     <li>lorem ipsum</li>
@@ -100,16 +119,15 @@
                     <li>lorem ipsum</li>
                     <li>lorem ipsum</li>
                 </ul>
-            </aside>
         </section>
         <section class="Galeria">
             <aside class="Galeria2">
-                <div class="animais">
-                <img src="raposa.png" alt="raposa" class="raposa">
-                <img src="lobo.png" alt="lobo" class="lobo">
-                <img src="jaguar.png" alt="jaguar" class="jaguar">
-                <img src="tigre.png" alt="tigre" class="tigre">
-                </div>
+                <div class="players">
+                    <img src="fallen.png" alt="fallen" class="fallen">
+                    <img src="monesy.png" alt="monesy" class="monesy">
+                    <img src="fnx.png" alt="fnx" class="fnx">
+                    <img src="s1mple.png" alt="s1mple" class="s1mple">
+                    </div>
             </aside>
         </section> 
     </aside>
