--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                 <div class="players">
                     <img src="fallen.png" alt="fallen" class="fallen">
                     <img src="monesy.png" alt="monesy" class="monesy">
-                    <img src="fnx.png" alt="fnx" class="fnx">
-                    <img src="s1mple.png" alt="s1mple" class="s1mple">
+                    <img src="nesk.png" alt="nesk" class="nesk">
+                    <img src="zig.png" alt="zig" class="zig">
                     </div>
             </aside>
         </section> 
